--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -31,17 +31,18 @@
             android:orientation="horizontal">
 
             <LinearLayout
+                android:id="@+id/btnPlay"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/btnPlay"
                 android:layout_weight="1"
                 android:background="@drawable/button"
+
                 android:orientation="vertical">
 
                 <ImageView
                     android:id="@+id/imageView5"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
+                    android:layout_width="67dp"
+                    android:layout_height="79dp"
                     android:layout_gravity="center"
                     android:layout_marginVertical="20dp"
 
@@ -55,20 +56,22 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@drawable/button"
-                android:orientation="vertical">
+                android:orientation="vertical"
+
+                >
 
                 <ImageView
                     android:id="@+id/imageView3"
                     android:layout_width="80dp"
+                    android:layout_height="89dp"
                     android:layout_gravity="center"
                     android:layout_marginVertical="20dp"
-                    android:layout_height="80dp"
                     android:src="@drawable/grabar" />
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="match_parent"
                 android:id="@+id/btnStop"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@drawable/button"
@@ -78,8 +81,8 @@
                     android:id="@+id/imageView4"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
-                    android:layout_marginVertical="20dp"
                     android:layout_gravity="center"
+                    android:layout_marginVertical="20dp"
 
                     android:src="@drawable/stop" />
             </LinearLayout>
