--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -19,7 +19,8 @@
             android:layout_width="match_parent"
             android:layout_marginTop="110dp"
             android:id="@+id/wvWeb"
-            android:layout_height="350dp" />
+            android:layout_height="350dp"
+            />
 
         <LinearLayout
             android:layout_width="match_parent"
