--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@drawable/back_login"
     android:layout_height="match_parent"
     tools:context=".Registro">
 
@@ -11,6 +12,9 @@
         android:layout_width="255dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="30dp"
+        android:backgroundTint="@color/white"
+        android:textColorHint="@color/white"
+        android:fontFamily="@font/bangers"
         android:ems="10"
         android:gravity="center"
         android:hint="Ingrese su correo electrónico"
@@ -23,6 +27,9 @@
         android:id="@+id/txtConstrasena"
         android:layout_width="255dp"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/white"
+        android:textColorHint="@color/white"
+        android:fontFamily="@font/bangers"
         android:layout_marginBottom="30dp"
         android:ems="10"
         android:gravity="center"
@@ -38,6 +45,9 @@
         android:layout_width="255dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="268dp"
+        android:backgroundTint="@color/white"
+        android:textColorHint="@color/white"
+        android:fontFamily="@font/bangers"
         android:ems="10"
         android:gravity="center"
         android:hint="Ingrese su teléfono"
@@ -51,8 +61,10 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="AUTENTICACIÓN"
+        android:text="REGISTRO DE USUARIO"
         android:textSize="30dp"
+        android:fontFamily="@font/bangers"
+        android:textColor="@android:color/holo_orange_light"
         app:layout_constraintBottom_toTopOf="@+id/txtNombre"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -64,6 +76,9 @@
         android:layout_width="255dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="30dp"
+        android:backgroundTint="@color/white"
+        android:textColorHint="@color/white"
+        android:fontFamily="@font/bangers"
         android:ems="10"
         android:gravity="center"
         android:hint="Ingrese su Nombre"
@@ -76,7 +91,9 @@
         android:layout_width="255dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
+        android:background="@drawable/button_style"
         android:text="Registro"
+        android:fontFamily="@font/bangers"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtTelefono" />
@@ -86,6 +103,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
+        android:textColor="@android:color/holo_orange_light"
+        android:fontFamily="@font/bangers"
         android:text="¿Tienes cuenta? Ingrese aquí"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
