--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/back_login"
     tools:context=".Login">
 
     <EditText
@@ -12,8 +13,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="192dp"
         android:ems="10"
+        android:fontFamily="@font/bangers"
         android:gravity="center"
         android:inputType="textPassword"
+        android:backgroundTint="@color/white"
+        android:textColorHint="@color/white"
         android:hint="Ingrese su contraseña"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,6 +29,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="104dp"
         android:ems="10"
+        android:fontFamily="@font/bangers"
+        android:textColorHint="@color/white"
+        android:backgroundTint="@color/white"
         android:gravity="center"
         android:hint="Ingrese su correo"
         app:layout_constraintEnd_toEndOf="parent"
@@ -36,7 +43,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="66dp"
-        android:text="AUTENTICACIÓN"
+        android:fontFamily="@font/bangers"
+        android:text="INICIO DE SESION"
+        android:textColor="@android:color/holo_orange_light"
         android:textSize="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -46,9 +55,12 @@
 
     <Button
         android:id="@+id/btnLogin"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Ingresar"
+        android:fontFamily="@font/bangers"
+        android:layout_marginHorizontal="80dp"
+        android:background="@drawable/button_style"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -61,7 +73,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
+        android:textColor="@android:color/holo_orange_light"
         android:text="¿Nuevo por aquí? Crear cuenta"
+        android:fontFamily="@font/bangers"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
