--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,24 +8,24 @@
     <fragment
         android:id="@+id/nav_home"
         android:name="com.example.autenticationfireb.ui.home.HomeFragment"
-        android:label="@string/menu_home"
+        android:label="Grabacion"
         tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/nav_gallery"
         android:name="com.example.autenticationfireb.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
+        android:label="Karaokes"
         tools:layout="@layout/fragment_gallery" />
 
     <fragment
         android:id="@+id/nav_slideshow"
         android:name="com.example.autenticationfireb.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
+        android:label="Grabaciones"
         tools:layout="@layout/fragment_slideshow" />
 
     <fragment
         android:id="@+id/mapsFragment"
         android:name="com.example.autenticationfireb.MapsFragment"
-        android:label="Ubicacion"
+        android:label="Ubicaciones"
         tools:layout="@layout/fragment_maps" />
 </navigation>
