--- a/app/src/main/res/menu/menu_menu_principal.xml
+++ b/app/src/main/res/menu/menu_menu_principal.xml
@@ -5,6 +5,6 @@
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
-        android:title="@string/app_name"
+        android:title="SING WITH US"
         app:showAsAction="never" />
 </menu>
